SGLParserTestProject/SGLParserTester/SGLParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g 2011-05-15 17:22:46

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;
namespace  SGL 
{
public partial class SGLParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"Identifier", 
		"IntegerAtom", 
		"FloatAtom", 
		"StringAtom", 
		"BooleanAtom", 
		"EscapeSequence", 
		"Letter", 
		"SGLIDDigit", 
		"UnicodeEscape", 
		"OctalEscape", 
		"HEX_DIGIT", 
		"WS", 
		"COMMENT", 
		"';'", 
		"'boolean'", 
		"'='", 
		"'int'", 
		"'string'", 
		"'float'", 
		"'Object'", 
		"'Sprite'", 
		"'Animation'", 
		"'?'", 
		"':'", 
		"'||'", 
		"'&&'", 
		"'=='", 
		"'!='", 
		"'<'", 
		"'>'", 
		"'<='", 
		"'>='", 
		"'+'", 
		"'-'", 
		"'*'", 
		"'/'", 
		"'%'", 
		"'++'", 
		"'--'", 
		"'!'", 
		"'('", 
		"')'", 
		"','", 
		"'null'"
    };

    public const int T__29 = 29;
    public const int T__28 = 28;
    public const int T__27 = 27;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int T__24 = 24;
    public const int T__23 = 23;
    public const int T__22 = 22;
    public const int T__21 = 21;
    public const int T__20 = 20;
    public const int SGLIDDigit = 11;
    public const int EOF = -1;
    public const int Identifier = 4;
    public const int T__19 = 19;
    public const int T__18 = 18;
    public const int T__17 = 17;
    public const int COMMENT = 16;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int T__46 = 46;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int IntegerAtom = 5;
    public const int StringAtom = 7;
    public const int HEX_DIGIT = 14;
    public const int BooleanAtom = 8;
    public const int T__30 = 30;
    public const int T__31 = 31;
    public const int T__32 = 32;
    public const int WS = 15;
    public const int T__33 = 33;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int UnicodeEscape = 12;
    public const int FloatAtom = 6;
    public const int OctalEscape = 13;
    public const int EscapeSequence = 9;
    public const int Letter = 10;

    // delegates
    // delegators



        public SGLParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public SGLParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[72+1];
             
             
        }
        

    override public string[] TokenNames {
		get { return SGLParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g"; }
    }


    	String output;
    	public String GetOutput() {
    		return output;
    	}



    // $ANTLR start "compilationUnit"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:38:1: compilationUnit : ( statement )+ ;
    public void compilationUnit() // throws RecognitionException [1]
    {   
        int compilationUnit_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return ; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:39:2: ( ( statement )+ )
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:39:4: ( statement )+
            {
            	// C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:39:4: ( statement )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == Identifier || LA1_0 == 18 || LA1_0 == 20) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:0:0: statement
            			    {
            			    	PushFollow(FOLLOW_statement_in_compilationUnit72);
            			    	statement();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return ;

            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            			    if ( state.backtracking > 0 ) {state.failed = true; return ;}
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, compilationUnit_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "compilationUnit"


    // $ANTLR start "statement"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:43:1: statement : ( localVariableDeclarationStatement | variableAssignmentStatement ) ';' ;
    public void statement() // throws RecognitionException [1]
    {   
        int statement_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return ; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:44:2: ( ( localVariableDeclarationStatement | variableAssignmentStatement ) ';' )
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:44:4: ( localVariableDeclarationStatement | variableAssignmentStatement ) ';'
            {
            	// C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:44:4: ( localVariableDeclarationStatement | variableAssignmentStatement )
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == 18 || LA2_0 == 20) )
            	{
            	    alt2 = 1;
            	}
            	else if ( (LA2_0 == Identifier) )
            	{
            	    alt2 = 2;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return ;}
            	    NoViableAltException nvae_d2s0 =
            	        new NoViableAltException("", 2, 0, input);

            	    throw nvae_d2s0;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:45:3: localVariableDeclarationStatement
            	        {
            	        	PushFollow(FOLLOW_localVariableDeclarationStatement_in_statement89);
            	        	localVariableDeclarationStatement();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return ;

            	        }
            	        break;
            	    case 2 :
            	        // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:46:5: variableAssignmentStatement
            	        {
            	        	PushFollow(FOLLOW_variableAssignmentStatement_in_statement96);
            	        	variableAssignmentStatement();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return ;

            	        }
            	        break;

            	}

            	Match(input,17,FOLLOW_17_in_statement101); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, statement_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "localVariableDeclarationStatement"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:53:1: localVariableDeclarationStatement : ( 'boolean' variableName ( '=' booleanExpression )? | 'int' variableName ( '=' mathExpression )? );
    public void localVariableDeclarationStatement() // throws RecognitionException [1]
    {   
        int localVariableDeclarationStatement_StartIndex = input.Index();
        SGLParser.variableName_return variableName1 = default(SGLParser.variableName_return);

        int mathExpression2 = default(int);


        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return ; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:54:2: ( 'boolean' variableName ( '=' booleanExpression )? | 'int' variableName ( '=' mathExpression )? )
            int alt5 = 2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0 == 18) )
            {
                alt5 = 1;
            }
            else if ( (LA5_0 == 20) )
            {
                alt5 = 2;
            }
            else 
            {
                if ( state.backtracking > 0 ) {state.failed = true; return ;}
                NoViableAltException nvae_d5s0 =
                    new NoViableAltException("", 5, 0, input);

                throw nvae_d5s0;
            }
            switch (alt5) 
            {
                case 1 :
                    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:54:5: 'boolean' variableName ( '=' booleanExpression )?
                    {
                    	Match(input,18,FOLLOW_18_in_localVariableDeclarationStatement117); if (state.failed) return ;
                    	PushFollow(FOLLOW_variableName_in_localVariableDeclarationStatement119);
                    	variableName();
                    	state.followingStackPointer--;
                    	if (state.failed) return ;
                    	// C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:54:28: ( '=' booleanExpression )?
                    	int alt3 = 2;
                    	int LA3_0 = input.LA(1);

                    	if ( (LA3_0 == 19) )
                    	{
                    	    alt3 = 1;
                    	}
                    	switch (alt3) 
                    	{
                    	    case 1 :
                    	        // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:54:29: '=' booleanExpression
                    	        {
                    	        	Match(input,19,FOLLOW_19_in_localVariableDeclarationStatement122); if (state.failed) return ;
                    	        	PushFollow(FOLLOW_booleanExpression_in_localVariableDeclarationStatement124);
                    	        	booleanExpression();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return ;

                    	        }
                    	        break;

                    	}


                    }
                    break;
                case 2 :
                    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:55:4: 'int' variableName ( '=' mathExpression )?
                    {
                    	Match(input,20,FOLLOW_20_in_localVariableDeclarationStatement131); if (state.failed) return ;
                    	PushFollow(FOLLOW_variableName_in_localVariableDeclarationStatement133);
                    	variableName1 = variableName();
                    	state.followingStackPointer--;
                    	if (state.failed) return ;
                    	// C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:55:23: ( '=' mathExpression )?
                    	int alt4 = 2;
                    	int LA4_0 = input.LA(1);

                    	if ( (LA4_0 == 19) )
                    	{
                    	    alt4 = 1;
                    	}
                    	switch (alt4) 
                    	{
                    	    case 1 :
                    	        // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:55:24: '=' mathExpression
                    	        {
                    	        	Match(input,19,FOLLOW_19_in_localVariableDeclarationStatement136); if (state.failed) return ;
                    	        	PushFollow(FOLLOW_mathExpression_in_localVariableDeclarationStatement138);
                    	        	mathExpression2 = mathExpression();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return ;
                    	        	if ( (state.backtracking==0) )
                    	        	{
                    	        	  output += "Lege Variable " + ((variableName1 != null) ? input.ToString((IToken)(variableName1.Start),(IToken)(variableName1.Stop)) : null) + " an mit dem Wert " + mathExpression2 + "\n";
                    	        	}

                    	        }
                    	        break;

                    	}


                    }
                    break;

            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 3, localVariableDeclarationStatement_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "localVariableDeclarationStatement"


    // $ANTLR start "variableAssignmentStatement"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:59:1: variableAssignmentStatement : variableDeclaration ;
    public void variableAssignmentStatement() // throws RecognitionException [1]
    {   
        int variableAssignmentStatement_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 4) ) 
    	    {
    	    	return ; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:60:2: ( variableDeclaration )
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:60:4: variableDeclaration
            {
            	PushFollow(FOLLOW_variableDeclaration_in_variableAssignmentStatement156);
            	variableDeclaration();
            	state.followingStackPointer--;
            	if (state.failed) return ;

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 4, variableAssignmentStatement_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "variableAssignmentStatement"


    // $ANTLR start "variableDeclaration"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:68:1: variableDeclaration : variableName ( '=' variableInit )? ;
    public void variableDeclaration() // throws RecognitionException [1]
    {   
        int variableDeclaration_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 5) ) 
    	    {
    	    	return ; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:69:2: ( variableName ( '=' variableInit )? )
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:69:4: variableName ( '=' variableInit )?
            {
            	PushFollow(FOLLOW_variableName_in_variableDeclaration175);
            	variableName();
            	state.followingStackPointer--;
            	if (state.failed) return ;
            	// C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:69:17: ( '=' variableInit )?
            	int alt6 = 2;
            	int LA6_0 = input.LA(1);

            	if ( (LA6_0 == 19) )
            	{
            	    alt6 = 1;
            	}
            	switch (alt6) 
            	{
            	    case 1 :
            	        // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:69:18: '=' variableInit
            	        {
            	        	Match(input,19,FOLLOW_19_in_variableDeclaration178); if (state.failed) return ;
            	        	PushFollow(FOLLOW_variableInit_in_variableDeclaration180);
            	        	variableInit();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return ;

            	        }
            	        break;

            	}


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 5, variableDeclaration_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "variableDeclaration"


    // $ANTLR start "variableInit"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:72:1: variableInit : expression ;
    public void variableInit() // throws RecognitionException [1]
    {   
        int variableInit_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 6) ) 
    	    {
    	    	return ; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:73:2: ( expression )
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:73:4: expression
            {
            	PushFollow(FOLLOW_expression_in_variableInit194);
            	expression();
            	state.followingStackPointer--;
            	if (state.failed) return ;

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 6, variableInit_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "variableInit"

    public class variableName_return : ParserRuleReturnScope
    {
    };

    // $ANTLR start "variableName"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:76:1: variableName : Identifier ;
    public SGLParser.variableName_return variableName() // throws RecognitionException [1]
    {   
        SGLParser.variableName_return retval = new SGLParser.variableName_return();
        retval.Start = input.LT(1);
        int variableName_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 7) ) 
    	    {
    	    	return retval; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:77:2: ( Identifier )
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:77:4: Identifier
            {
            	Match(input,Identifier,FOLLOW_Identifier_in_variableName207); if (state.failed) return retval;

            }

            retval.Stop = input.LT(-1);

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 7, variableName_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "variableName"


    // $ANTLR start "variableType"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:80:1: variableType : ( primitiveType | classType );
    public void variableType() // throws RecognitionException [1]
    {   
        int variableType_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 8) ) 
    	    {
    	    	return ; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:81:2: ( primitiveType | classType )
            int alt7 = 2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0 == 18 || (LA7_0 >= 20 && LA7_0 <= 22)) )
            {
                alt7 = 1;
            }
            else if ( ((LA7_0 >= 23 && LA7_0 <= 25)) )
            {
                alt7 = 2;
            }
            else 
            {
                if ( state.backtracking > 0 ) {state.failed = true; return ;}
                NoViableAltException nvae_d7s0 =
                    new NoViableAltException("", 7, 0, input);

                throw nvae_d7s0;
            }
            switch (alt7) 
            {
                case 1 :
                    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:81:4: primitiveType
                    {
                    	PushFollow(FOLLOW_primitiveType_in_variableType219);
                    	primitiveType();
                    	state.followingStackPointer--;
                    	if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:82:4: classType
                    {
                    	PushFollow(FOLLOW_classType_in_variableType224);
                    	classType();
                    	state.followingStackPointer--;
                    	if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 8, variableType_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "variableType"


    // $ANTLR start "primitiveType"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:86:1: primitiveType : ( 'boolean' | 'string' | 'int' | 'float' );
    public void primitiveType() // throws RecognitionException [1]
    {   
        int primitiveType_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 9) ) 
    	    {
    	    	return ; 
    	    }
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:87:5: ( 'boolean' | 'string' | 'int' | 'float' )
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\WindowsFormsApplication4\\WindowsFormsApplication4\\SGL.g:
            {
            	if ( input.LA(1) == 18 || (input.LA(1) >= 20 && input.LA(1) <= 22) ) 
            	{
            	    input.Consume();
            	    state.errorRecovery = false;state.failed = false;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return ;}
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 9, primitiveType_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "primitiveType"

